src/objects/Asset_Incomes__c.object
<CustomObject>
    <description>Object holds all asset / income data related to an Applicant</description>
    <fields>
        <fullName>Alimony__c</fullName>
        <label>Alimony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated applicant</description>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Assets / Incomes</relationshipLabel>
        <relationshipName>Assets_Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Field associates this Assets / Incomes record with the appropriate Application record</description>
        <inlineHelpText>Application related to this Assets / Income</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Assets / Incomes</relationshipLabel>
        <relationshipName>Asset_Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Available_Amount__c</fullName>
        <label>Cash Available Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Support__c</fullName>
        <label>Child Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Goods_Value__c</fullName>
        <label>Household Goods Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRA_Retirement_Amount__c</fullName>
        <label>IRA Retirement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Dividends__c</fullName>
        <formula>IF(ISNULL( X1_Interests_Dividends__c ), 0,  X1_Interests_Dividends__c )
+
IF(ISNULL( X2_Interests_Dividends__c ), 0,  X2_Interests_Dividends__c )
+
IF(ISNULL( X3_Interests_Dividends__c ), 0,  X3_Interests_Dividends__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest/Dividends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Assets / Incomes record to the appropriate Loan record</description>
        <inlineHelpText>Associates the Assets / Incomes record to the appropriate Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipName>Asset_Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Income_Amount__c</fullName>
        <label>Other Income Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income_Frequency__c</fullName>
        <label>Other Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partnerships_and_S_Corporations__c</fullName>
        <label>Partnerships and S-Corporations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension__c</fullName>
        <label>Pension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Address__c</fullName>
        <label>Primary Residence Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Value__c</fullName>
        <label>Primary Residence Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_Accounts__c</fullName>
        <label>Retirement Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SS_Income__c</fullName>
        <label>SS Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stated_Gross_Income_Frequency__c</fullName>
        <label>Stated Gross Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stated_Gross_Income__c</fullName>
        <label>Stated Gross Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stocks_and_securities_Amount__c</fullName>
        <label>Stocks and securities Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <label>Trust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wages__c</fullName>
        <label>Wages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Interests_Dividends__c</fullName>
        <label>1) Interests/Dividends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Other_Assets_Description__c</fullName>
        <inlineHelpText>e.g. Vehicles, Boats, RV etc.</inlineHelpText>
        <label>1) Other Assets Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Other_Assets_Value__c</fullName>
        <label>1) Other Assets Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Other_Real_Estate_Owned_Address__c</fullName>
        <label>1) Other Real Estate Owned Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Other_Real_Estate_Value__c</fullName>
        <label>1) Other Real Estate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Interests_Dividends__c</fullName>
        <label>2) Interests/Dividends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Other_Assets_Description__c</fullName>
        <inlineHelpText>e.g. Vehicles, Boats, RV etc.</inlineHelpText>
        <label>2) Other Assets Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Other_Assets_Value__c</fullName>
        <label>2) Other Assets Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Other_Real_Estate_Owned_Address__c</fullName>
        <label>2) Other Real Estate Owned Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Other_Real_Estate_Value__c</fullName>
        <label>2) Other Real Estate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Interests_Dividends__c</fullName>
        <label>3) Interests/Dividends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Other_Real_Estate_Owned_Address__c</fullName>
        <label>3) Other Real Estate Owned Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Other_Real_Estate_Value__c</fullName>
        <label>3) Other Real Estate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Assets / Incomes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assets / Incomes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets / Incomes</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>